--- a/_layouts/equalcolumns.html
+++ b/_layouts/equalcolumns.html
@@ -115,6 +115,23 @@ layout: compress
                     </div>
                 </div>
             </div>
+
+            <div id="content" class="grid" style="margin-bottom: 1rem; margin-top: 1rem">
+                <div class="grid-sizer"></div>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-1.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-2.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-3.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-4.jpg' | relative_url }}" /></span>
+            </div>
+            <div>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-5.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-6.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-7.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-8.jpg' | relative_url }}" /></span>
+                <span class="grid-item"><img src="{{ '/assets/japan/japan-9.jpg' | relative_url }}" /></span>
+            </div>
+            <br />
+            <br />
             {{ content }}
         </div>
     </div>
