--- a/_includes/form.html
+++ b/_includes/form.html
@@ -15,7 +15,7 @@
       <option>eerste graad; 12-14 jarigen</option>
       <option>tweede graad; 14-16 jarigen</option>
       <option>derde graad; 16-18 jarigen</option>
-      <option>18+</option>
+      <option>KA18+</option>
     </select>
     <br />
   </div>
