Revert "Merge branch 'master' of https://github.com/lucasvanhooreweghe/kanvas"
This reverts commit 13c139cc370f0a5161ccd6cf7e2c25740fbaf681, reversing
changes made to c719480e17ab864c07187ca53b49b19ebb6d392b.

--- a/_includes/form.html
+++ b/_includes/form.html
@@ -12,10 +12,10 @@
   <div class="form__input">
     <label for="group" style="margin-right: 1rem">Kies uw groep:</label>
     <select id="group" name="group" required>
-      <option value="group-one">eerste graad; 12-14 jarigen</option>
-      <option value="group-two">tweede graad; 14-16 jarigen</option>
-      <option value="group-three">derde graad; 16-18 jarigen</option>
-      <option value="group-four">KA18+</option>
+      <option>eerste graad; 12-14 jarigen</option>
+      <option>tweede graad; 14-16 jarigen</option>
+      <option>derde graad; 16-18 jarigen</option>
+      <option>KA18+</option>
     </select>
     <br />
   </div>
